--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </main>
     <div class="data">
       <h1>Jakub Žitník</h1>
-      <a href="/new/jakubzitnik/game1">Hra 1</a>
-      <a href="/new/jakubzitnik/game2">Hra 2</a>
+      <a href="/new/jakubzitnik/game1" target="_blank">Hra 1</a>
+      <a href="/new/jakubzitnik/game2" target="_blank">Hra 2</a>
     </div>
     <script>
       setTimeout(() => {
