--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h1>Ota</h1>
       <a href="/new/ota" target="_blank">Moje hra</a>
       <h1>Heřman</h1>
-      <a href="/new/hernam" target="_blank">Moje hra</a>
+      <a href="/new/herman" target="_blank">Moje hra</a>
       <h1>Adel</h1>
       <a href="/new/adel" target="_blank">Muchomůrky a žába</a>
       <h1>Kuba</h1>
